# NixView

./: .gitignore  .travis.yml  AnotherTree.hpp  AnotherTree.ui  CMakeLists.txt  InfoWidget.cpp  InfoWidget.hpp  InfoWidget.ui  LICENSE  MainViewWidget.cpp  MainViewWidget.hpp  MainViewWidget.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NixProxyModel.cpp  NixProxyModel.hpp  NixView.pro  NixView.pro.user.18  NixView.pro.user.3.2-pre1  NixView.pro.user.5e84e8a  README.md  RawTreeView.cpp  RawTreeView.hpp  RawTreeView.ui  TagView.cpp  TagView.hpp  TagView.ui  aboutdialog.ui  changelog_rpm  datatabledialog.ui  entitydescriptor.cpp  entitydescriptor.h  filepropertiesdialog.cpp  filepropertiesdialog.hpp  filepropertiesdialog.ui  index.html  lineplotter.cpp  lineplotter.h  lineplotter.ui  (+20 more)
InfoWidget/: DescriptionPanel.cpp  DescriptionPanel.hpp  DescriptionPanel.ui  InfoWidget.cpp  InfoWidget.hpp  InfoWidget.ui  MetaDataPanel.cpp  MetaDataPanel.hpp  MetaDataPanel.ui  TagPanel.cpp  TagPanel.hpp  TagPanel.ui  plotdialog.ui
NixDataModel/: NixDataModel.cpp  NixDataModel.hpp
Plotter/: plotter.cpp  plotter.h
Test/: AnotherTree.cpp  AnotherTree.ui
cmake/: CMakeCPackOptions.cmake  FindNIX.cmake  MacOSXBundleInfo.plist.in  NixView.cmake  QtCommon.cmake
common/: Common.hpp
db/: projectindex.cpp  projectindex.hpp  projectmanager.cpp  projectmanager.hpp
dialogs/: aboutdialog.ui  csvexportdialog.cpp  csvexportdialog.h  csvexportdialog.ui  cvsexportdialog.cpp  cvsexportdialog.h  cvsexportdialog.ui  filepropertiesdialog.cpp  filepropertiesdialog.hpp  filepropertiesdialog.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  plotdialog.cpp  plotdialog.h  plotdialog.ui  tabledialog.cpp  tabledialog.hpp  tabledialog.ui
filter/: NixProxyModel.cpp  NixProxyModel.hpp
images/: nixview.icns
infowidget/: DescriptionPanel.cpp  DescriptionPanel.hpp  DescriptionPanel.ui  InfoWidget.cpp  InfoWidget.hpp  InfoWidget.ui  MetaDataPanel.cpp  MetaDataPanel.hpp  MetaDataPanel.ui  TagPanel.cpp  TagPanel.hpp  TagPanel.ui
model/: NixDataModel.cpp  NixDataModel.hpp  NixModelItem.cpp  NixModelItem.hpp  nixarraytablemodel.cpp  nixarraytablemodel.h  nixmetadatatreemodel.cpp  nixmetadatatreemodel.h  nixtreemodel.cpp  nixtreemodel.h  nixtreemodelitem.cpp  nixtreemodelitem.h
options/: OptionsTabWidget.cpp  OptionsTabWidget.hpp  OptionsWidget.cpp  OptionsWidget.hpp  OptionsWidget.ui  TreeViewOptions.cpp  TreeViewOptions.hpp  TreeViewOptions.ui  recentfileoptions.cpp  recentfileoptions.hpp  recentfileoptions.ui
options/viewoptions/: TreeViewOptions.cpp  TreeViewOptions.hpp  TreeViewOptions.ui
plotter/: categoryplotter.cpp  categoryplotter.h  categoryplotter.ui  colormap.cpp  colormap.hpp  eventplotter.cpp  eventplotter.h  eventplotter.ui  imageplotter.cpp  imageplotter.h  imageplotter.ui  lineplotter.cpp  lineplotter.h  lineplotter.ui  plotter.h  plotwidget.cpp  plotwidget.h  plotwidget.ui
test/: create_test_file.py  create_test_file.py~  lena.bmp Alias  lif.py  nix_test.h5
utils/: entitydescriptor.cpp  entitydescriptor.h  loadthread.cpp  loadthread.h  tagcontainer.cpp  tagcontainer.h  utils.cpp  utils.hpp
views/: ColumnView.cpp  ColumnView.hpp  ColumnView.ui  MainViewWidget.cpp  MainViewWidget.hpp  MainViewWidget.ui  RawTreeView.cpp  RawTreeView.hpp  RawTreeView.ui  TagView.cpp  TagView.hpp  TagView.ui  datatable.cpp  datatable.h  datatable.ui  lazyloadview.cpp  lazyloadview.h  lazyloadview.ui  projectnavigator.cpp  projectnavigator.hpp  projectnavigator.ui
